Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7
-
None
-
66ea7d6de (dev), a9a36b112 (6.7)
Description
It seems that qmlls crashes when typing (or auto-completing) a return statement
function f() { return 5 // crashes right after typing the space behind return }
Investigate + fix the crash.
Attachments
Issue Links
- is required for
-
QTBUG-113727 qmlls: improve Code completion using new QQmlLSUtils stuff
- Closed
For Gerrit Dashboard: QTBUG-119842 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
525469,8 | qmlls: fix crash on return statements | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
526838,4 | qmlls: fix crash on return statements | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |