qmlls: fix crash on return statements

Check if the return statement has an expression before accessing a
possibly null pointer. This leads to a crash of qmlls right after typing
'return' (as the Dom is created before any return expression exists).

Pick-to: 6.7
Fixes: QTBUG-119842
Change-Id: I892446916b1e067cc53efd5c636a0c2dbbee9289
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>